--- a/js_app1/templates/index.html
+++ b/js_app1/templates/index.html
@@ -4,6 +4,7 @@
     {% load static %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="{% static 'script/sandbox.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
